restored features to reduced motion
Added portrait for and media query on resize for reduced motion

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img class="cover" src="assets/shellop.png" alt="Ryan Dang portrait">
+    <img class="cover" src="assets/shellgrab.png" alt="Ryan Dang portrait">
         <section class="grid">
             <img class="logo" src="assets/logo.png" alt="Ryan Dang logo">
             <section class="card">
