--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <title>Ryan Dang Business Card</title>
 </head>
 <body>
     <img class="cover" src="assets/shellgrab.png" alt="Ryan Dang portrait">
