Fixed font to display correctly

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
                 <ul>
                     <li>
                         <a class="imgwrap" href="https://dangvryan.github.io/">
-                            <img class="webout" src="assets/icons/icon_webwhite.png">
+                            <img class="webout" alt="Ryan Dang portfolio website" src="assets/icons/icon_webwhite.png">
                             <img class="webover" src="assets/icons/icon_weborange.png">
                             dangvryan.github.io
                         </a>
                     </li>
                     <li>
                         <a class="imgwrap" href="mailto: dangvryan@gmail.com">
-                            <img class="webout" src="assets/icons/icon_mailwhite.png">
+                            <img class="webout" alt="Email me" src="assets/icons/icon_mailwhite.png">
                             <img class="webover" src="assets/icons/icon_mailorange.png">
                             dangvryan@gmail.com
                         </a>
                     </li>
                     <li>
                         <a class="imgwrap" href="https://www.linkedin.com/in/dangvryan/">
-                            <img class="webout" src="assets/icons/icon_linkedwhite.png">
+                            <img class="webout" alt="Visit my LinkedIn" src="assets/icons/icon_linkedwhite.png">
                             <img class="webover" src="assets/icons/icon_linkedorange.png">
                             linkedin.com/in/dangvryan 
                         </a>
