--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ryan Dang Business Card">
+    <meta name="keywords" content="HTML, CSS, Javascript, Business Card, Graphic Design">
+    <meta name="author" content="Ryan Dang">
     <link rel="stylesheet" href="main.css">
     <title>Ryan Dang Business Card</title>
 </head>
