--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ryan Dang Business Card">
-    <meta name="keywords" content="HTML, CSS, Javascript, Business Card, Graphic Design">
+    <meta name="keywords" content="HTML, CSS, Javascript, Business Card, Graphic Design, Ryan Dang">
     <meta name="author" content="Ryan Dang">
+    <meta httl-equiv="refresh" content="60">
     <link rel="stylesheet" href="main.css">
     <title>Ryan Dang Business Card</title>
 </head>
